// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component as disabled 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="IconButton IconButton--disabled IconButton--secondary"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-icon-button"
    disabled=""
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        Actions
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component using a multiple dropdown lists 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="IconButton IconButton--secondary"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        Actions
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component using a single dropdown list 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="IconButton IconButton--secondary"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        Actions
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown my-extra-class"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="IconButton IconButton--secondary"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        Actions
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with published status 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="IconButton IconButton--secondary"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        Actions
      </span>
    </span>
  </button>
</div>
`;
